--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/contact" >Contact</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/stdir" >Structural Directives</a>
+        </li>
        
       </ul>
       <form class="d-flex" role="search">
