--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,10 @@
           <a class="nav-link" routerLink="/stdir" >Structural Directives</a>
         </li>
        
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/controlflow" >Control Flow Statements</a>
+        </li>
+       
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
